Avoid some flickering

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -7,6 +7,9 @@
          url('/fonts/mcfont.svg#svgFontName') format('svg');
 }
 
+[v-cloak] {
+    display: none
+}
 
 html, body {
     height: 100%;
